# ofdm-hls

./: .gitignore  README.md  VALIDATION.md  cfo_correct.cpp  cfo_correct.h  clockInfo.txt  conv_enc.cpp  conv_fec.h  conv_fec_tb.cpp  export_ip.tcl  ofdm_channel_sim.py  ofdm_rx.cpp  ofdm_rx.h  ofdm_rx_tb.cpp  ofdm_tx.cpp  ofdm_tx.h  ofdm_tx_tb.cpp  review_comments.md  run_ber_sweep.sh  run_csim.tcl  run_loopback.sh  run_loopback_all.sh  run_loopback_noisy.sh  run_rx_csim.tcl  scrambler.cpp  setup_vitis.sh  sync_detect.cpp  synth_all_ips.sh  viterbi_dec.cpp  vivado.jou  vivado_496690.backup.jou  vivado_501740.backup.jou  vivado_502073.backup.jou  vivado_504099.backup.jou  vivado_504712.backup.jou
.Xil/Vivado-504099-LPT1146/realtime/: dupFiles.rpt  ofdm_chain_wrapper.tcl
docs/: ARCHITECT_REVIEW_MALE_HALE.md  ENGINEERING_SPEC_UAV_DATALINK.md  FLEXLINK_ANALYSIS.md  OFDM_HLS_ANALYSIS.md  PRODUCT_BRIEF.md  REGRESSION_PLAN.md  RESOURCES.md  RX_GATING_DESIGN.md  RX_LOW_SNR_DEBUG.md  VALIDATION.md  ad93loopback.md  worklog.md
docs/files/: INTEGRATION.md  OPTIMIZATION_GUIDE.md  export_all_ip.tcl  ofdm_subsystem.py
ip_repo/: ofdm_chain.f
ip_repo/cfo_correct/: component.xml
ip_repo/cfo_correct/hdl/verilog/: cfo_correct.v  cfo_correct_cfo_correct_Pipeline_CORRECT.v  cfo_correct_ctrl_s_axi.v  (+8 more)
ip_repo/conv_enc/: component.xml
ip_repo/fec_rx/: component.xml
ip_repo/fec_rx/doc/: ReleaseNotes.txt
ip_repo/interleaver/: component.xml
ip_repo/ofdm_mac/: component.xml
ip_repo/ofdm_mac/doc/: ReleaseNotes.txt
ip_repo/ofdm_mac/xgui/: ofdm_mac_v1_0.tcl
ip_repo/ofdm_rx/: component.xml
ip_repo/ofdm_rx/drivers/ofdm_rx_v1_0/src/: CMakeLists.txt  Makefile  xofdm_rx.c  xofdm_rx.h  xofdm_rx_hw.h  xofdm_rx_linux.c
ip_repo/ofdm_rx/xgui/: ofdm_rx_v1_0.tcl
ip_repo/ofdm_tx/: component.xml
ip_repo/scrambler/: component.xml
ip_repo/sync_detect/: component.xml
ip_repo/sync_detect/drivers/sync_detect_v1_0/src/: CMakeLists.txt  xsync_detect.c  xsync_detect.h  xsync_detect_linux.c  xsync_detect_sinit.c
ip_repo/sync_detect/xgui/: sync_detect_v1_0.tcl
ip_repo/tx_chain/: component.xml
ip_repo/viterbi_dec/: component.xml
lib_compat/: libncurses.so.5  libtinfo.so.5
litex/: README.md  TODO.md  hallycon_m2sdr_platform.py  hallycon_m2sdr_target_v2.py  mac.md  shell.py
sim/: fec_reference.py  gen_zc_lut.py  ofdm_channel_sim.py  ofdm_reference.py  plot_ber.py  pluto_bist_diag.py  pluto_bist_ofdm_test.py  pluto_bist_probe.py  pluto_dump.py  pluto_loopback.py  pluto_timing_sweep.py
src/: cfo_correct.cpp  cfo_correct.h  conv_enc.cpp  fec_rx.cpp  fec_rx.h  free_run.h  interleaver.cpp  interleaver.h  ofdm_lut.h  ofdm_mac.cpp  ofdm_mac.h  ofdm_rx.cpp  ofdm_rx.h  ofdm_tx.cpp  ofdm_tx.h  scrambler.h  sync_cfo.cpp  sync_cfo.h  sync_detect.cpp  sync_detect.h  tx_chain.cpp  tx_chain.h  viterbi_dec.cpp
tb/: ofdm_rx_tb.cpp  ofdm_tx_tb.cpp  sync_detect_tb.cpp
tcl/: export_ip.tcl  synth_all.tcl  synth_cfo_correct.tcl  synth_conv_enc.tcl  synth_fec_rx.tcl  synth_interleaver.tcl  synth_ofdm_mac.tcl  synth_rx.tcl  synth_scrambler.tcl  synth_sync_cfo.tcl  synth_sync_detect.tcl  synth_tx.tcl  synth_tx_chain.tcl  synth_viterbi.tcl
tests/: run_ber_sweep.sh  run_loopback.sh  run_loopback_all.sh  run_loopback_noisy.sh  run_regression.sh  test.md  test_all.sh  test_ber_full.sh  test_blocks.sh  test_chain_matrix.sh  test_combined_sweep.sh  test_common.sh  test_fec_gain.sh  test_stress.sh
vivado/: create_ofdm_bd.tcl  create_project.tcl  ofdm_top.xdc  timing_post_impl.rpt  utilization_post_impl.rpt  utilization_post_impl_summary.rpt  utilization_post_synth.rpt  utilization_post_synth_summary.rpt
vivado/ofdm_impl/: ofdm_hdl.xpr
vivado/ofdm_impl/ofdm_hdl.gen/sources_1/bd/ofdm_chain/ip/ofdm_chain_tx_scrambler_0/drivers/scrambler_v1_0/src/: CMakeLists.txt  xscrambler_hw.h  xscrambler_linux.c
(+749 files in other folders)
